# MulleObjCKVCFoundation

./: .gitignore  .touch  .travis.yml  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  KVC_README.md  MulleObjCKVCFoundation.sublime-project  README.md  RELEASENOTES.md  clib.json  package.json
.bootstrap/: repositories
.travis.d/: before_install
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cola/: description.md.bud  properties.plist
mulle-project/: version-info.sh
src/: MulleObjCContainerKeyValueCoding.h  MulleObjCContainerKeyValueCoding.m  MulleObjCKVCFoundation-standalone.m  MulleObjCKVCFoundation.h  MulleObjCKVCFoundationStandalone.m  MulleObjCLoader+MulleObjCKVCFoundation.h  MulleObjCLoader+MulleObjCKVCFoundation.m  NSArray+KeyValueCoding.m  NSArray+MulleObjCKVCArithmetic.m  NSDictionary+KeyValueCoding.m  NSMutableDictionary+KeyValueCoding.m  NSNumber+MulleObjCKVCArithmetic.h  NSNumber+MulleObjCKVCArithmetic.m  NSObject+KVCSupport.h  NSObject+KVCSupport.m  NSObject+KeyValueCoding.h  NSObject+KeyValueCoding.m  NSObject+_MulleObjCKVCInformation.h  NSObject+_MulleObjCKVCInformation.m  NSProxy+_MulleObjCKVCInformation.m  NSSet+KeyValueCoding.m  NSSortDescriptor+NSKeyValueCoding.m  _MulleObjCInstanceVariableAccess.h  _MulleObjCInstanceVariableAccess.m  _MulleObjCKVCFoundation-import-private.h  _MulleObjCKVCFoundation-import.h  _MulleObjCKVCFoundation-include-private.h  _MulleObjCKVCFoundation-include.h  _MulleObjCKVCInformation.h  _MulleObjCKVCInformation.m  (+6 more)
(+65 files in other folders)
